Window remembers its location.
Info button now turns off when manually dragging the info drawer closed.
Fixed weirdness when displaying the info drawer after closing the window (via menu or keyboard shortcut). Performing Get info now makes the window visible.
Added a donation menu item. ($)
Clicking the text field now toggles Time Elapsed with Time Remaining.

0.05 alpha 1
------------
Dragging to the dock icon now works in 10.3.
Selection now selects the first song added when adding new files.
Now seeds the random number generator for shuffle mode.
Redesigned UI thanks to Julian Mayer <julianmayer (at) mac.com>.
If nothing is selected when the user presses play, the first song is selected and played.
Double-clicking when out of focus now behaves as expected.
Now has a simple dock menu courtesy of Nathanael Weldon <nathanael (at) mailblocks.com>.
The playlist index now starts at 1.
Seekbar now updates the time field as you drag it, Simon Savary <savary (at) oricom.ca>
French translation courtesy of Simon Savary <savary (at) oricom.ca>
Window is now brought to the front when opening a playlist.
Should work with 3rd party audio devices.
Gapless playback.
New core which should feature better performance.
New bugs and crashes!

0.04
----
Fixed id3v1 tag issue when taggers use spaces to fill empty bytes.
Fixed minor UI (Hide NewApplication) bug.
Fixed version number, so autoupdate should work.
Compiled with GCC3.3, which should hopefully fix issues with 10.3. (If it doesn't, contact me please)
Now ignores case when dealing with file extensions.
Added volume slider.
Fixed autopositioning of the volume slider.
Fixed crash when dragging/dropping files to the playlist.

0.03
-----
Fixed bug where Default.playlist referred to non-existent files, resulting in a crash.
Clicking on the time display will now alternate between current time, and time to go.
Now makes ham.

0.02
-----
Awesomized id3v2 and tagging support courtesy of TagLib.